--- a/project-1-protype/cs/main.css
+++ b/project-1-protype/cs/main.css
@@ -118,6 +118,7 @@ a.to_nav:focus {
     display:inline-block;
     margin-top: 3cm;
     margin-left: 7cm;
+    text-align: center;
 }
 #welcome {
     display:inline-block;
@@ -135,8 +136,31 @@ a.to_nav:focus {
     float: right;
     font-size: .8em;
     margin-top:14cm;
-    margin-right:.1cm;
 }
+
+#main_nav ul{
+    background-color:black;
+    list-style: inherit;
+    padding:5px 0;
+    
+}
+
+#main_nav li{
+    display:block;
+    padding: 0 20px;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    line-height: 2em;
+    height:2em;
+    border-bottom: 1px solid black;
+
+}
+
+#main_nav li a:hover,#pmain_nav li a:focus{
+    color:black;
+    background:grey;
+}
+
 @media only screen and (min-width: 768px) {
     
     a.to_nav{
@@ -145,18 +169,29 @@ a.to_nav:focus {
     
     .wrapper{
         position: relative;
-        width: 768px;
         margin:auto;
+        width:1920px
+    }
+    
+    #title{
+        position: relative;
+        left:5em;
+        
+    }
+    
+    #bottom{
+        background:black;
     }
     
     #main_nav{
         position: absolute;
         top:5px;
-        right:10px;
+        right:1em;
+        left:1em;
         background:none;
     }
     
-    #primary_nav li{
+    #main_nav li{
         display:inline;
     }
     
