--- a/project-1-protype/cs/main.css
+++ b/project-1-protype/cs/main.css
@@ -70,21 +70,11 @@ a {
 }
 
 
-h1.logo a {
-    color: grey;
-    text-decoration: none;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 20px;
-    line-height: 22px;
-    float: left;
-    letter-spacing: 0.2em;
-}
  
 a.to_nav {
     float: right;
     color: white;
-    background-color:deepskyblue;
+    background-color:black;
     text-decoration: none;
     padding: 0 .2cm;
     font-size: 1em;
@@ -101,8 +91,8 @@ a.to_nav {
  
 a.to_nav:hover,
 a.to_nav:focus {
-    color: black;
-    background: blue;
+    color: white;
+    background: orange;
 }
 
 #home{
