made changes to copyright to fix an issue in mobile view where copyright goes all the way to the bottom. Resolve this by moving into @media and remove the margin in mobile view. Change the font color to cyan.

--- a/project-1-protype/main.css
+++ b/project-1-protype/main.css
@@ -127,7 +127,8 @@ a.to_nav:focus {
    
     float: right;
     font-size: .8em;
-    margin-top:14cm;
+    color:cyan;
+    
 }
 
 #main_nav ul{
@@ -268,6 +269,11 @@ p {
     #welcome{
         text-align: justify;
     }
-    
+    #copyright{ 
+        float: right;
+        font-size: .8em;
+        margin-top:14cm;
+        color:cyan;
+    }
 }
 
