--- a/project-1-protype/main.css
+++ b/project-1-protype/main.css
@@ -207,6 +207,8 @@ p {
 #my_form{
     text-align: center;
 }
+
+/*@media is a conditon when the resolution is greater than 768 px */
 @media only screen and (min-width: 768px) {
     
     a.to_nav{
